[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmrl"
version = "0.1.0"
description = "Environment-agnostic reinforcement learning algorithm package."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "tensordict>=0.6.0",
]

[project.optional-dependencies]
gymnasium = ["gymnasium>=1.0"]
dm-control = [
  "gymnasium>=1.0",
  "shimmy[dm-control]>=2.0",
  "scipy>=1.13",
]
tensorboard = ["tensorboard>=2.14"]
wandb = ["wandb>=0.17"]
logging = ["tensorboard>=2.14", "wandb>=0.17"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
indent-style = "space"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
  "ty>=0.0.1a20",
]
